--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/elementscapital/typetrader#readme",
   "devDependencies": {
-    "@types/node": "^14.14.20",
+    "@types/node": "^15.12.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
@@ -33,5 +33,8 @@
   },
   "dependencies": {
     "talib-binding": "^1.0.2"
-  }
+  },
+  "pre-commit": [
+    "lint"
+  ]
 }
