--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "rm -rf ./lib && tsc -w",
     "tsc": "rm -rf ./lib && tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "validate": "npm ls"
   },
   "repository": {
     "type": "git",
@@ -23,13 +24,13 @@
   },
   "homepage": "https://github.com/elementscapital/typetrader#readme",
   "devDependencies": {
-    "@types/node": "^15.12.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.16.0",
-    "nodemon": "^2.0.6",
+    "@types/node": "^16.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "nodemon": "^2.0.12",
     "precommit-hook": "^3.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "talib-binding": "^1.0.2"
